# megatext

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
gke/: submit.py  submit_convert.py  submit_delete.py  submit_singlehost.py  utils.py
gke/infra/: v5e.yaml
gke/jobs/convert/: example.yaml
gke/jobs/test/: ab_gdn_new.sh  ab_gdn_old.sh  example.yaml  probe_assoc.sh  probe_fused_c256.sh  probe_nopallas.sh  probe_pallas.sh  probe_swa_bs1.sh  test_autotune_qwen3_next.yaml  test_autotune_qwen3_swa_8b_stage1.sh  test_checkpoint_resume.yaml  test_checkpoint_resume_compare.yaml  test_pretrain.yaml  test_pretrain_load.yaml  test_pretrain_load_bestfit.sh  test_pretrain_load_bestfit.yaml  test_pretrain_qwen3_muon.yaml  test_pretrain_qwen3_swa.yaml  test_qwen3_next_8b_noopt.sh  (+9 more)
gke/setup/: preflight.sh  rto_setup.sh  setup_gcsfuse.sh  setup_kaniko.sh  setup_xpk.sh
scripts/: download_and_export.py  sanity_check.py
tests/: conftest.py  test_blended_data_source.py  test_data_pipeline.py  test_fixed_arecord.py
tests/end_to_end/: test_checkpoint_compatibility.sh  test_checkpointing.sh  test_generate_param_only_checkpoint.sh  test_mtc_phase_2_save_path.sh  test_multi_tier_checkpointing.sh
tests/inference/: benchmark_offline_engine.py  kvcache_test.py  page_manager_test.py  test_llama2_7b_bf16.sh  test_llama2_7b_int8.sh
tests/integration/: aot_identical_test.py  checkpoint_compatibility_test.py  checkpointing_test.py  decode_tests.py  determinism_test.py  generate_param_only_checkpoint_test.py  gradient_accumulation_test.py  shmap_collective_matmul_test.py  simple_decoder_layer_test.py  standalone_dl_ckpt_test.py  train_tests.py  vision_encoder_test.py  xaot_test.py
tests/unit/: attention_test.py  checkpoint_conversion_test.py  configs_test.py  configs_value_test.py  context_parallelism_test.py  custom_mesh_and_rule_test.py  data_loader_test.py  deepseek32_vs_reference_test.py  deepseek_scan_engram_test.py  dequantize_mxfp4_test.py  diloco_test.py  engram_vs_reference_test.py  flop_calculation_test.py  gcloud_stub_test.py  gcs_utils_test.py  gemma3_layers_test.py  gemma4_conversion_test.py  gke_submit_test.py  goodput_utils_test.py  gpt3_test.py  gpt_vs_reference_test.py  hf_checkpoint_conversion_test.py  instruction_data_processing_test.py  kernels_test.py  llama4_layers_test.py  llama_test.py  lr_schedule_test.py  max_utils_test.py  maxengine_test.py  maxtext_utils_test.py  metric_logger_abort_test.py  mhc_test.py  moba_vs_reference_test.py  model_test.py  moe_test.py  multi_token_prediction_test.py  multihost_dataloading_test.py  multimodal_rope_check.py  multimodal_utils_test.py  nnx_decoders_test.py  (+34 more)
tests/utils/: attention_test_util.py  forward_pass_logit_checker.py  multimodal_test_utils.py  run_sharding_dump.py  sharding_dump.py  test_helpers.py
tools/: generate_param_only_checkpoint.py  get_flops.py  layerwise_quantization.py
tools/data/: _common.py  mmap_to_arecord.py  split_mmap.py  text_to_arecord.py  text_to_mmap.py
(+302 files in other folders)
