[project]
name = "megatext"
version = "0.1.0"
description = "Simple, performant and scalable Jax LLM pretraining"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "orbax-checkpoint",
    # Data
    "array-record",
    "grain",
    "numpy",
    # Tokenizers
    "transformers",
    "sentencepiece",
    "tiktoken",
    # Config & Logging
    "pydantic>=2.0",
    "omegaconf",
    "absl-py",
    "wandb",
    "tensorboardx",
    # Google Cloud
    "gcsfs",
    "google-cloud-storage",
    # Utilities
    "protobuf",
    "pillow",
    "uvloop",
    # Dev
    "pytest",
]

[project.optional-dependencies]
tpu = [
    "libtpu",
    "google-tunix",
    "pathwaysutils",
    "cloud-tpu-diagnostics",
    "cloud-accelerator-diagnostics",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/megatext"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
